# mit_cheetah_description

./: CMakeLists.txt  README.md  package.xml
config/: cheetah.rviz
launch/: view_cheetah.launch
urdf/: cheetah.urdf.xacro  cheetah_drake.urdf  const.urdf.xacro  leg.urdf.xacro  materials.urdf.xacro  transmission.urdf.xacro
