<?xml version="1.0"?>
<package format="3">
  <name>mit_cheetah_description</name>
  <version>1.0.0</version>
  <description>mit cheeta description</description>
  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
